<resources>
    <string name="app_name">My Application</string>
    <string name="decline">Decline</string>
    <string name="complete_blood_count">Complete blood count</string>
    <string name="date">12/05/2020</string>
    <string name="accept">Accept</string>
    <string name="something">something</string>
    <string name="appointment_request">Appointment Request</string>
    <string name="comment">Comment</string>
    <string name="some_texte_here_not_saw">Some texte here, not Saw</string>
    <string name="dat">12 Jan 2020, 8am-10am</string>
    <string name="louis">Louis</string>
    <string name="patterson">Patterson</string>
    <string name="to_your_weight_loss_plain">to your Weight Loss plain</string>
    <string name="_119_99_year">$119.99/Year</string>
    <string name="something_something_something">Something something something</string>
    <string name="_7_day_free_trial">7 DAY FREE TRIAL</string>
    <string name="continue_">Continue</string>
    <string name="restore_purchases">Restore purchases</string>
    <string name="something_something_something_something_something_nsomething_something_something">Something Something Something Something Something\nSomething Something Something</string>
    <string name="sign_up">Sign Up</string>
    <string name="about_you">About You</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="birthday">Birthday</string>
    <string name="_1998_03_09">1998-03-09</string>
    <string name="height">Height</string>
    <string name="_152_cm">152 cm</string>
    <string name="centimeters">Centimeters</string>
    <string name="ft">ft</string>
    <string name="feet_or_inches">Feet or Inches</string>
    <string name="in">in</string>
    <string name="cm">cm</string>
    <string name="weight">Weight</string>
    <string name="_130_lbs">130 lbs</string>
    <string name="pounds">Pounds</string>
    <string name="kilograms">Kilograms</string>
    <string name="lbs">lbs</string>
    <string name="next">Next</string>
</resources>