<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:contentDescription="@string/something"
        android:id="@+id/close"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="4dp"
        android:background="@drawable/ic_baseline_close_24"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:text="Unlock\nUnlimited Access"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/close" />

    <TextView
        android:id="@+id/title_under_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/to_your_weight_loss_plain"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title" />


    <View
        android:id="@+id/pager_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/title_under_text" />

    <LinearLayout
        android:id="@+id/first_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="28dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/pager_layout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">


            <ImageView
                android:contentDescription="@string/something"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:background="@drawable/unchecked"
                android:gravity="center" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_119_99_year"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/something_something_something"
                android:textColor="@color/black" />


        </LinearLayout>


    </LinearLayout>


    <LinearLayout

        android:id="@+id/second_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:orientation="horizontal"
        android:background="@drawable/back8"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/first_linear"

        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">


            <ImageView
                android:contentDescription="@string/something"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:background="@drawable/checked"
                android:gravity="center" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7_day_free_trial"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/something_something_something"
                android:textColor="@color/black" />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/back7"
        android:padding="20dp"
        android:textStyle="bold"
        android:text="@string/continue_"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/second_linear" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/purchase"
        android:text="@string/restore_purchases"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn" />

    <TextView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/purchase"
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="8sp"
        android:text="@string/something_something_something_something_something_nsomething_something_something"
        android:layout_height="wrap_content"
        tools:ignore="SmallSp" />


</androidx.constraintlayout.widget.ConstraintLayout>