<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/itema_back"
    android:orientation="vertical"
    android:weightSum="3"
    android:layout_height="300dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="2"
        android:background="@drawable/back1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:weightSum="15"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:textColor="#BFBBBB"
                android:text="@string/some_texte_here_not_saw"
                android:layout_weight="14"
                android:layout_height="match_parent"
                tools:ignore="NestedWeights" />

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:background="@drawable/ic_of_two_dots"
                android:layout_height="16dp"/>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="30dp"
            android:layout_height="0dp">
            <ImageView
                android:contentDescription="@string/something"
                android:layout_width="24dp"
                android:background="@drawable/ic_small_clock"
                android:layout_height="24dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="14"
                android:layout_marginLeft="10dp"
                android:text="@string/dat"
                android:textColor="@color/white"
                android:textSize="22sp" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="5"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_weight="1">


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:layout_marginTop="15dp"
            android:layout_height="match_parent"
            app:cardCornerRadius="32dp"
            android:layout_margin="5dp"
            tools:ignore="NestedWeights">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/person" />

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2.8"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp">


            <TextView
                android:layout_width="match_parent"
                android:padding="4dp"
                android:textSize="18sp"
                android:text="@string/louis"
                android:textColor="@color/black"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="18sp"
                android:text="@string/patterson"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:padding="4dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="32dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_info"
                android:layout_height="32dp"
                android:layout_marginEnd="10dp" />
        </LinearLayout>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="3"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginStart="30dp">
        
        
        <Button
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/accept"
            android:textColor="@color/white"
            android:layout_margin="8dp"
            android:background="@drawable/back2"
            android:layout_height="wrap_content"
            tools:ignore="NestedWeights" />
        <Button
            android:layout_width="0dp"
            android:text="@string/decline"
            android:background="@drawable/back3"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp" />






    </LinearLayout>





</LinearLayout>